--- a/index.html
+++ b/index.html
@@ -261,22 +261,22 @@
       <div class="stats text-center">
         <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-3 stat-box">
+            <div class="col-12 col-md-6 col-lg-3 stat-box">
                 <h5 class="timer" data-from="0" data-to="2542" data-speed="5000"></h5>
                 <span>CLIENTS SERVED</span>
               <i class="fab fa-adn i-1"></i>
             </div>
-            <div class="col-12 col-lg-3 stat-box">
+            <div class="col-12 col-md-6 col-lg-3 stat-box">
               <h5 class="timer" data-from="0" data-to="1230" data-speed="5000"></h5>
               <span>X-RAYS DONE</span>
               <i class="fas fa-ambulance"></i>
           </div>
-          <div class="col-12 col-lg-3 stat-box">
+          <div class="col-12 col-md-6 col-lg-3 stat-box">
             <h5 class="timer" data-from="0" data-to="742" data-speed="5000"></h5>
               <span>WORLDWIDE STAFF</span>
             <i class="fas fa-american-sign-language-interpreting"></i>
             </div>
-            <div class="col-12 col-lg-3 stat-box">
+            <div class="col-12 col-md-6 col-lg-3 stat-box">
               <h5 class="timer" data-from="0" data-to="3842" data-speed="5000"></h5>
                 <span>LIVES SAVED</span>
               <i class="fas fa-award i-4"></i>
